Fix CSS issue with text wrapping around delete icon in the task title card

--- a/css/main.css
+++ b/css/main.css
@@ -23,9 +23,9 @@ article {
 }
 
 article h2 {
-  display: inline-block;
   font-size: 1.4em;
   padding: 5px 0px;
+  margin-left: 5px;
 }
 
 input, textarea, #save-button, #search-box, #show-completed-button {
@@ -56,7 +56,8 @@ input, textarea {
 p {
   display: block;
   padding: 12px 0px;
-  text-align: left
+  text-align: left;
+  margin-left: 5px;
 }
 
 .flexer {
@@ -70,6 +71,11 @@ margin: 32px;
 .task-header {
   color: #ffc500;
 }
+
+/*.task-title:focus {
+  border: 2px solid #;
+  margin-left: 50px;
+}*/
 
 .importance-container {
   padding: 15px 0px 10px 8px;
@@ -88,7 +94,7 @@ textarea {
   margin-right: 5px;
 }
 
-.complete-button:hover {
+.complete-button:hover, .complete-button:focus {
   cursor: pointer;
   background-color: #F2A541;
 }
@@ -123,25 +129,25 @@ textarea {
 .delete-button {
   background: url('../images/delete.svg') no-repeat;
   float: right;
-  margin: auto;
+  margin: 5px 5px 0 0;
 }
 
-#save-button:hover, #show-completed-button:hover {
+#save-button:hover, #save-button:focus, #show-completed-button:hover, #show-completed-button:focus {
   background: #dc7c40;
   cursor: pointer;
 }
 
-.up-button:hover {
+.up-button:hover, .up-button:focus {
   background: url('../images/upvote-hover.svg') no-repeat;
   cursor: pointer;
 }
 
-.down-button:hover {
+.down-button:hover, .down-button:focus {
   background: url('../images/downvote-hover.svg') no-repeat;
   cursor: pointer;
 }
 
-.delete-button:hover {
+.delete-button:hover, .delete-button:focus {
   background: url('../images/delete-hover.svg') no-repeat;
   cursor: pointer;
 }
